<resources>
    <string name="app_name">CALENDAR\nAPP</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="send_to">SEND TO</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">Password</string>
    <string name="hint_timezone">Timezone eg. Asia/kolkata</string>
    <string name="hint_email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="heading_all">All Events</string>
    <string name="heading_invites">Invites</string>
    <string name="heading_my_events">Events</string>

    <string name="title_activity_my_events">MyEventsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!--Element Names-->
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="start_time">BEGIN</string>
    <string name="end_time">FINISH</string>
    <string name="add_users">ADD USERS</string>
    <string name="create">CREATE</string>
    <string name="update">UPDATE</string>
    <string name="schedule">SCHEDULE</string>
    <string name="close">CLOSE</string>
    <string name="logout">LOGOUT</string>
    <string name="all_events">ALL EVENTS</string>
    <string name="title">TITLE</string>
    <string name="message">MESSAGE</string>
    <string name="audio_message">AUDIO MESSAGE</string>
    <string name="video_message">VIDEO MESSAGE</string>
    <string name="file_message">ATTACH FILE</string>
    <string name="record">RECORD</string>
    <string name="event">EVENT</string>
    <string name="welcome">WELCOME</string>
    <string name="create_event">CREATE EVENT</string>
    <string name="periodic_sms">TIMELY SMS</string>
    <string name="periodic_video_sms">VIDEO SMS</string>
    <string name="periodic_audio">TIMELY AUDIO</string>
    <string name="on">ON</string>
    <string name="at">AT</string>
    <string name="hosted_by">HOSTED BY</string>
    <string name="today">TODAY</string>
    <string name="menu">MENU</string>
    <string name="home">HOME</string>
    <string name="change_date">Change Date</string>
    <string name="things_next">Upcomings Events</string>
    <string name="things_now">Event Right Now</string>


    <!--Activity names-->
    <string name="new_event_activity">CREATE EVENT</string>
    <string name="edit_event_activity">EDIT EVENT</string>
</resources>
