<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whitebackground"
    tools:context="com.wasim.calendarApp.MyEventsActivity">

    <!--Title-->
    <LinearLayout
        android:id="@+id/title_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/actionbar3" />

            <TextView
                android:id="@+id/app_name_txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/activity_title_margin_left"
                android:layout_marginTop="15dp"
                android:text="@string/app_name"
                android:textSize="14dp" />

            <ImageView
                android:id="@+id/menu_imgView"
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/app_name_txtView"
                android:layout_marginRight="5dp"
                android:src="@drawable/logout" />

        </RelativeLayout>

    </LinearLayout>

    <!--Now or next event-->
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/now_event_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_ll"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_now_event_txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_title_margin_left"
            android:shadowColor="@color/divider"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:text="@string/things_now"
            android:textColor="@color/activity_title_color"
            android:textSize="15dp"
            android:textStyle="normal" />

        <!--Border Linear Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/border_size"
            android:layout_marginLeft="@dimen/ll_border_margin_left"
            android:layout_marginRight="@dimen/ll_border_margin_right"
            android:layout_marginTop="5dp"
            android:background="@color/divider"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_title_margin_left"
            android:layout_marginRight="@dimen/activity_title_margin_right"
            android:layout_marginTop="5dp"
            android:background="#00ffffff"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/avatar"
                    android:minHeight="50dp"
                    android:orientation="vertical" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/event_now_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:shadowColor="@color/divider"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2"
                        android:textColor="@color/element_value_color"
                        android:textSize="25dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/event_now_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/element_value_color" />

                        <TextView
                            android:id="@+id/event_now_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:textColor="@color/element_value_color" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <!--Border Linear Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/border_size"
            android:layout_marginLeft="@dimen/ll_border_margin_left"
            android:layout_marginRight="@dimen/ll_border_margin_right"
            android:layout_marginTop="5dp"
            android:background="@color/divider"></LinearLayout>

    </LinearLayout>

    <!--Date Event-->
    <LinearLayout
        android:id="@+id/date_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/now_event_ll"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_title_txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_title_margin_left"
            android:layout_weight="1"
            android:shadowColor="@color/divider"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="5"
            android:text="@string/today"
            android:textColor="@color/activity_title_color"
            android:textSize="@dimen/activity_title_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_changedate_txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/change_date"
            android:textColor="@color/activity_title_color"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!--Remaining events-->
    <LinearLayout
        android:id="@+id/next_event_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/date_ll"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_next_event_txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_title_margin_left"
            android:layout_marginTop="10dp"
            android:shadowColor="@color/divider"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:visibility="gone"
            android:text="@string/things_next"
            android:textColor="@color/activity_title_color"
            android:textSize="15dp"
            android:textStyle="normal" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/today_event_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:clipToPadding="false"
            android:padding="5dp"
            android:scrollbars="vertical"
            tools:listitem="@layout/item_event" />

    </LinearLayout>

    <!--Menu-->
    <LinearLayout
        android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bottom_ll"
        android:gravity="center"
        android:padding="15dp">

        <TextView
            android:id="@+id/menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/menu"
            android:textColor="@color/bottom__element" />

    </LinearLayout>

</RelativeLayout>
