<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whitebackground"
    tools:context=".PeriodicSMSActivity">

    <LinearLayout
        android:id="@+id/title_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/actionbar3" />

            <TextView
                android:id="@+id/app_name_txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/activity_title_white_color"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/activity_title_margin_left"
                android:layout_marginTop="15dp"
                android:text="@string/app_name"
                android:textSize="14dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/activity_title_txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_title_margin_left"
            android:shadowColor="@color/divider"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="5"
            android:text="@string/periodic_sms"
            android:textColor="@color/activity_title_color"
            android:textSize="@dimen/activity_title_size"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_ll"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <!--Date Linear Layout-->
            <LinearLayout
                android:id="@+id/date_LL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_ll"
                android:layout_marginLeft="@dimen/activity_title_margin_left"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/from_txtView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/on"
                        android:textColor="@color/element_heading_color" />

                    <EditText
                        android:id="@+id/field_from_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="Date"
                        android:maxLines="1"
                        android:padding="@dimen/element_padding_size"
                        android:textColor="@color/element_value_color" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/start_time_txtView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/at"
                        android:textColor="@color/element_heading_color" />

                    <EditText
                        android:id="@+id/field_from_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="Time"
                        android:maxLines="1"
                        android:padding="@dimen/element_padding_size"
                        android:textColor="@color/element_value_color" />

                </LinearLayout>

            </LinearLayout>

            <!--Border Linear Layout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/border_size"
                android:layout_marginLeft="@dimen/ll_border_margin_left"
                android:layout_marginRight="@dimen/ll_border_margin_right"
                android:background="@color/divider"></LinearLayout>

            <!--Border Linear Layout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/border_size"
                android:layout_marginLeft="@dimen/ll_border_margin_left"
                android:layout_marginRight="@dimen/ll_border_margin_right"
                android:background="@color/divider"></LinearLayout>

            <!--Message Linear Layout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/activity_title_margin_left"
                android:layout_marginRight="@dimen/activity_title_margin_right"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_txtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message"
                    android:textColor="@color/element_heading_color" />

                <EditText
                    android:id="@+id/field_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/time_LL"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@null"
                    android:hint="Click to add"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:scrollHorizontally="false"
                    android:textColor="@color/element_value_color"
                    android:textColorHint="@color/element_hint_color" />

            </LinearLayout>

            <!--Border Linear Layout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/border_size"
                android:layout_marginLeft="@dimen/ll_border_margin_left"
                android:layout_marginRight="@dimen/ll_border_margin_right"
                android:background="@color/divider"></LinearLayout>

            <!--Add Users Linear Layout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/activity_title_margin_left"
                android:layout_marginRight="@dimen/activity_title_margin_right"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/add_users_txtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_to"
                    android:textColor="@color/element_heading_color" />

                <MultiAutoCompleteTextView
                    android:id="@+id/field_users"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/time_LL"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@null"
                    android:hint="Click to add"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:scrollHorizontally="false"
                    android:textColor="@color/element_value_color"
                    android:textColorHint="@color/element_hint_color" />

            </LinearLayout>

            <!--Border Linear Layout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/border_size"
                android:layout_marginLeft="@dimen/ll_border_margin_left"
                android:layout_marginRight="@dimen/ll_border_margin_right"
                android:background="@color/divider"></LinearLayout>

            <!--Border Linear Layout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/border_size"
                android:layout_marginLeft="@dimen/ll_border_margin_left"
                android:layout_marginRight="@dimen/ll_border_margin_right"
                android:background="@color/divider"></LinearLayout>

            <!--Border Linear Layout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/border_size"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="@dimen/ll_border_margin_left"
                android:layout_marginRight="@dimen/ll_border_margin_right"
                android:background="@color/divider"></LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bottom_ll"
        android:gravity="center"
        android:id="@+id/create_ll"
        android:padding="15dp">

        <TextView
            android:id="@+id/fab_submit_event"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/schedule"
            android:textColor="@color/bottom__element" />

    </LinearLayout>

</RelativeLayout>
